@@ -6,6 +6,7 @@ import lombok.*;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors; // [추가] Collectors 임포트
 
 @Data
 @NoArgsConstructor
@@ -14,46 +15,27 @@ import java.util.Map;
 public class LiveResponse {
 
     private Long liveId;
-
     private String title;
-
     private String description;
-
     private String posterUrl;
-
     private String ticketUrl;
-
     private String venue;
-
     private Map<String, Integer> price;
-
     private String writerName;
-
     private Long writerId;
-
     private List<ArtistSummaryDto> artists;
-
     private List<LiveScheduleDto> schedules;
-
     private LocalDateTime ticketDateTime;
-
     private RequestStatus requestStatus;
-
     private LocalDateTime createdAt;
-
     private LocalDateTime updatedAt;
-
     private int countBookmark;
-
     private Boolean isBookmarked;
 
-
-
-    // 비로그인
     public static LiveResponse fromEntity(Live entity) {
 
         LiveResponse liveResponse = LiveResponse.builder()
-                .liveId(entity.getId())
+                .liveId(entity.getId()) // [수정] .id() -> .liveId() (필드명 일치)
                 .title(entity.getTitle())
                 .description(entity.getDescription())
                 .posterUrl(entity.getPosterUrl())
@@ -66,15 +48,17 @@ public class LiveResponse {
                 .artists(
                         entity.getLiveArtists().stream()
                                 .map(liveArtist ->
-                                        ArtistSummaryDto.fromEntity(liveArtist.getArtist()))
-                                .toList()
+                                        // [수정] 인자 개수 맞춤 (followerCount 자리에 0L 전달)
+                                        ArtistSummaryDto.fromEntity(liveArtist.getArtist(), 0L))
+                                .collect(Collectors.toList())
                 )
                 .schedules(
                         entity.getLiveSchedules().stream()
                                 .map(liveSchedule ->
+                                        // [수정] ScheduleDto -> LiveScheduleDto (올바른 클래스 사용)
                                         LiveScheduleDto.fromEntity(liveSchedule.getSchedule())
                                 )
-                                .toList()
+                                .collect(Collectors.toList())
                 )
                 .requestStatus(entity.getRequestStatus())
                 .countBookmark(0)
@@ -86,32 +70,4 @@ public class LiveResponse {
 
         return liveResponse;
     }
-    
-//    // 로그인
-//    public static LiveResponse fromEntity(Live entity, User user) {
-//        return LiveResponse.builder()
-//                .id(entity.getId())
-//                .title(entity.getTitle())
-//                .description(entity.getDescription())
-//                .posterUrl(entity.getPosterUrl())
-//                .ticketUrl(entity.getTicketUrl())
-//                .ticketDateTime(entity.getTicketDateTime())
-//                .venue(entity.getVenue())
-//                .price(entity.getPrice())
-//                .artists(
-//                        entity.getLiveArtists().stream()
-//                                .map(liveArtist ->
-//                                        ArtistSummaryDto.fromEntity(liveArtist.getArtist()))
-//                                .toList()
-//                )
-//                .schedules(
-//                        entity.getLiveSchedules().stream()
-//                                .map(liveSchedule ->
-//                                        ScheduleDto.fromEntity(liveSchedule.getSchedule())
-//                                )
-//                                .toList()
-//                )
-//                .countBookmark
-//                .build();
-//    }
 }
